--- a/.env
+++ b/.env
@@ -17,6 +17,8 @@ MAIL_PORT=465
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
+//这里配置完后要到config目录配置mail.php
+//一定要修改此处'from' => ['address' => '和上面的邮箱一致', 'name' => '邮件发送人,可自己自定义'],
 
 WEIBO_KEY=
 WEIBO_SECRET=
