--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*",
+		"laravel/framework": "6.20.14",
 		"doctrine/dbal": "^2.5",
 		"illuminate/html": "^5.0",
 		"socialiteproviders/weibo": "^1.0",
